Add test for built-in self-signed certificate generation.